<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeFragment"
    android:id="@+id/nest_scrollview">



    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="?actionBarSize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@color/blue">
        <androidx.viewpager2.widget.ViewPager2
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            android:paddingStart="35dp"
            android:paddingEnd="35dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:id="@+id/banner_vp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:columnCount="4"
                    android:rowCount="2"
                    android:alignmentMode="alignBounds"
                    android:padding="5dp"

                    >
                <LinearLayout
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1 "
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_gravity="center"
                        android:contentDescription="@string/img"

                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/wallet"/>
                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/my_wallet"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_gravity="center"
                        android:contentDescription="@string/img"

                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/verified"/>
                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/sale_category"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_gravity="center"

                        android:contentDescription="@string/img"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/share"/>
                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/my_share_code"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_gravity="center"
                        android:contentDescription="@string/img"

                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/debit_card"/>
                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/payment_associate"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_gravity="center"
                        android:contentDescription="@string/img"

                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/shopping_cart_one_sale"/>
                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/best_sale"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_gravity="center"
                        android:contentDescription="@string/img"

                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/buy_one_get_one_free"/>
                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/buy_one_get_one_free"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_gravity="center"
                        android:contentDescription="@string/img"

                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/discounts"/>
                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/discount_for_second_one"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_gravity="center"
                        android:contentDescription="@string/img"

                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/qr_code"/>
                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/scan_code"/>

                </LinearLayout>





            </GridLayout>
        </androidx.cardview.widget.CardView>
        <View android:id="@+id/rectangle_at_the_top"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_alignParentTop="true"
            android:background="#f2f2f2"
            android:visibility="visible"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintVertical_bias="0"
                    android:paddingTop="10dp"
                    android:paddingHorizontal="20dp"
                    android:paddingBottom="5dp"
                    android:id="@+id/suggest_good_wrapper">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/like"
                        android:contentDescription="@string/img" />
                    <TextView
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/suggest_goods"
                        android:gravity="center"
                        android:textSize="15sp"/>

                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/suggest_good_wrapper"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:id="@+id/suggest_good_recyclerview"
                    android:paddingVertical="5dp"
                    android:overScrollMode="never"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_alignParentTop="true"
            android:background="#f2f2f2"
            android:visibility="visible"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:background="#FFFFFF"
            >
            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabMode="fixed"
                app:tabIndicatorFullWidth="false"
                app:tabIndicatorColor="@color/blue"
                app:tabRippleColor="@color/blue"
                />
            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
        </LinearLayout>
    </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        app:justifyContent="space_around"
        android:id="@+id/flex_box"
        android:background="@color/blue"
        android:foregroundGravity="left"

        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""/>

    </com.google.android.flexbox.FlexboxLayout>
</androidx.constraintlayout.widget.ConstraintLayout>